--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,8 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   margin-right: 15px;
-  width: 250px;
-  height: 300px;
+  width: 320px;
+  height: 370px;
   overflow: hidden;
   text-align: left;
   transition: transform 0.2s, box-shadow 0.2s;
@@ -53,7 +53,7 @@ body {
 
 .card-image {
   width: 100%;
-  height: 140px;
+  height: 180px;
   background-size: cover;
   background-position: center;
   transition: opacity 0.3s;
@@ -64,21 +64,21 @@ body {
 }
 
 .card-content {
-  padding: 16px;
+  padding: 15px;
   height: calc(100% - 140px);
   display: flex;
   flex-direction: column;
 }
 
 .card-title {
-  font-size: 18px;
+  font-size: 17px;
   margin: 0 0 8px;
   color: #4da8da;
 }
 
 .card-description {
   color: #a0a0a0;
-  font-size: 14px;
+  font-size: 0.9em;
   margin-bottom: 10px;
   flex-grow: 1;
   overflow: hidden;
