--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ body {
 
 h2 {
   font-family: "Roboto", sans-serif;
+  background-color: #1004;
   color: #4da8da;
   font-size: 72px;
   margin: 40px 0;
@@ -113,4 +114,31 @@ h2 {
 
 .share-icons a:hover {
   color: #ffffff;
+}
+
+.card-details {
+  background-color: rgba(22, 33, 62, 0.9);
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  display: none;
+}
+
+.card-details h4 {
+  margin: 10px 0 5px;
+  color: #4da8da;
+}
+
+.card-details ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.card-details li {
+  margin-bottom: 5px;
+  color: #e0e0e0;
 }
