--- a/styles.css
+++ b/styles.css
@@ -45,18 +45,20 @@ body {
   margin-right: 0;
 }
 
+/*
 .card:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 12px rgba(0, 100, 255, 0.3);
   border-color: rgba(77, 168, 218, 0.6);
   width: calc(100vw - 30px);
   height: calc(90vh - 30px);
-  margin: 15px;
+  margin: 15px
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1000;
 }
+*/
 
 .card-image {
   width: 100%;
@@ -93,6 +95,7 @@ body {
   display: -webkit-box;
   -webkit-line-clamp: 4;
 }
+
 h2 {
   font-family: "Roboto", sans-serif;
   background-color: #1004;
@@ -160,11 +163,25 @@ h2 {
   margin-bottom: 5px;
   color: #e0e0e0;
 }
+
 @media (min-width: 1024px) {
   .card {
     height: 415px;
     margin-right: 2%;
   }
+  .card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 100, 255, 0.3);
+  border-color: rgba(77, 168, 218, 0.6);
+  /*width: calc(100vw - 30px);
+  height: calc(90vh - 30px);
+  */
+  margin: 15px
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
   .card-title {
     font-size: 20px;
   }
@@ -177,7 +194,7 @@ h2 {
   }
   .share-icons a {
     color: #4da8da;
-    margin-left: 10px; 
+    margin-left: 10px;
     font-size: 22px;
     text-decoration: none;
   }
