--- a/styles.css
+++ b/styles.css
@@ -67,10 +67,16 @@ body {
   background-size: cover;
   background-position: center;
   transition: opacity 0.6s;
+  
+}
+
+.card:hover .card-content {
+ opacity: 0;
 }
 
 .card:hover .card-image {
-  opacity: 0.8;
+  opacity: 0.9;
+  height: 100%;
 }
 
 .card-content {
@@ -133,16 +139,16 @@ h2 {
 .card-details {
   background-color: rgba(22, 33, 62, 0.9);
   position: absolute;
-  top: 55%;
+  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
   width: 100%; 
-  height: 50%;
-  max-height: 50%;
+  height: 100%;
+  padding: 5%;
   overflow-y: auto;
   display: none;
-  margin: auto;
-  padding: 12px; 
+  margin: auto; 
   box-sizing: border-box; /* Inclut le padding dans la largeur/hauteur totale */
   word-wrap: break-word; /* Empêche les mots d'être coupés */
   overflow-wrap: break-word; /* Version plus moderne de word-wrap */
@@ -150,20 +156,23 @@ h2 {
 
 .card-details h4 {
   margin: 10px 0 5px;
-  color: #4da8da;
+  color: #a0a0a0;
 }
 
 .card-details .positives {
   color: #7dda58;
+  font-size: 0.8em;
 }
 
 .card-details .negatives {
   color: #d20103;
+  font-size: 0.8em;
 }
 
 .card-details ul {
   list-style-type: disc;
   padding-left: 15px;
+  font-size: 0.8em;
 }
 
 .card-details li {
