--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
 }
 
 .card:hover .card-content {
- opacity: 0;
+ opacity: 1;
 }
 
 .card:hover .card-image {
@@ -117,7 +117,7 @@ h2 {
 .share-icons {
   position: absolute;
   bottom: 10px;
-  right: 10px;
+  right: 15px;
 }
 
 .share-icons a {
@@ -133,7 +133,7 @@ h2 {
 
 .card:hover .share-icons {
   opacity: 1;
-  z-index: 10;
+  z-index: 1000;
 }
 
 .card-details {
@@ -156,7 +156,7 @@ h2 {
 
 .card-details h4 {
   margin: 10px 0 5px;
-  color: #a0a0a0;
+  color: red;
 }
 
 .card-details .positives {
