--- a/styles.css
+++ b/styles.css
@@ -45,33 +45,16 @@ body {
   margin-right: 0;
 }
 
-/*
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 6px 12px rgba(0, 100, 255, 0.3);
-  border-color: rgba(77, 168, 218, 0.6);
-  width: calc(100vw - 30px);
-  height: calc(90vh - 30px);
-  margin: 15px
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-*/
-
-
 .card-image {
   width: 100%;
   height: 200px;
   background-size: cover;
   background-position: center;
   transition: opacity 0.6s;
-  
 }
 
 .card:hover .card-content {
- opacity: 1;
+  opacity: 1;
 }
 
 .card:hover .card-image {
@@ -143,12 +126,12 @@ h2 {
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
-  padding: 5%;
+  padding: 20px; /* Ajoute un espace intérieur */
   overflow-y: auto;
   display: none;
-  margin: auto; 
+  margin: auto;
   box-sizing: border-box; /* Inclut le padding dans la largeur/hauteur totale */
   word-wrap: break-word; /* Empêche les mots d'être coupés */
   overflow-wrap: break-word; /* Version plus moderne de word-wrap */
@@ -186,12 +169,9 @@ h2 {
 }
 
 .column {
-
-  margin-right: 10px;
-  margin-left: 5px;
-  width: 70%;
-  
-
+  margin-right: 5px;
+  margin-left: auo;
+  width: 48%; /* Ajuste la largeur pour éviter de toucher les bords */
 }
 
 @media (min-width: 1024px) {
@@ -200,18 +180,17 @@ h2 {
     margin-right: 2%;
   }
   .card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 6px 12px rgba(0, 100, 255, 0.3);
-  border-color: rgba(77, 168, 218, 0.6);
-  /*width: calc(100vw - 30px);
-  height: calc(90vh - 30px);
-  */
-  margin: 15px
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 100, 255, 0.3);
+    border-color: rgba(77, 168, 218, 0.6);
+    /*width: calc(100vw - 30px);
+    height: calc(90vh - 30px);*/
+    margin: 15px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+  }
   .card-title {
     font-size: 20px;
   }
@@ -229,3 +208,4 @@ h2 {
     text-decoration: none;
   }
 }
+
