--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 .slider-container {
+  margin-left: 15px;
   width: 100%;
   overflow-x: auto;
   white-space: nowrap;
@@ -169,13 +170,29 @@ h2 {
   .card {
     height: 415px;
     margin-right: 2%;
-    transition: transform 0.4s ease, box-shadow 0.4s ease, border-color 0.4s ease;
+    position: relative;
+    overflow: hidden;
+    transition: box-shadow 0.8s ease, border-color 0.8s ease;
   }
   .card:hover {
-    box-shadow: 0 12px 24px rgba(0, 100, 255, 0.5);
+    box-shadow: 2px 4px rgba(0, 100, 255, 0.5);
     border-color: rgba(77, 168, 218, 0.8);
-    transform: scale(1.05);
-    z-index: 1000;
+  }
+  .card::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(to right, #4da8da, #00c6ff);
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.4s ease;
+  }
+  .card:hover::before {
+    transform: scaleX(1);
+    transform-origin: left;
   }
   .card-title {
     font-size: 20px;
@@ -194,4 +211,3 @@ h2 {
     text-decoration: none;
   }
 }
-
