--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ h2 {
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
 
 /* Style des icônes de partage */
