--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
   background-color: #1a1a2e;
   color: #e0e0e0;
   margin: 0;
-  padding: 10px;
 }
 
 /* Style du titre principal */
@@ -27,8 +26,7 @@ h2 {
 
 /* Style du conteneur du carrousel */
 .slider-container {
-  margin-left: 15px;
-  width: calc(100% - 30px); /* Ajustement pour tenir compte des marges */
+  width: 100%;
   overflow-x: auto;
   white-space: nowrap;
   scrollbar-width: none;
@@ -36,6 +34,7 @@ h2 {
   padding: 10px 0;
   padding-left: 15px;
   padding-right: 15px;
+  box-sizing: border-box;
 
   /* Supprimer la barre de défilement */
   &::-webkit-scrollbar {
@@ -50,7 +49,8 @@ h2 {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   margin-right: 15px;
-  width: 320px;
+  width: calc(33.33% - 15px);
+  max-width: 320px;
   height: 390px;
   overflow: hidden;
   text-align: left;
@@ -192,6 +192,7 @@ h2 {
     position: relative;
     overflow: hidden;
     transition: box-shadow 0.8s ease, border-color 0.8s ease;
+    width: calc(25% - 2%);
   }
 
   .card:hover {
