--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,14 @@ h2 {
   white-space: nowrap;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  padding: 10px 0;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 10px;
+  /* padding-left: 15px; */
+  /* padding-right: 15px; */
   box-sizing: border-box;
 
   /* Supprimer la barre de défilement */
   &::-webkit-scrollbar {
-    display: none;
+  display: none;
   }
 }
 
@@ -49,8 +49,7 @@ h2 {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   margin-right: 15px;
-  width: calc(33.33% - 15px);
-  max-width: 320px;
+  width: 320px;
   height: 390px;
   overflow: hidden;
   text-align: left;
@@ -192,7 +191,6 @@ h2 {
     position: relative;
     overflow: hidden;
     transition: box-shadow 0.8s ease, border-color 0.8s ease;
-    width: calc(25% - 2%);
   }
 
   .card:hover {
