--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ h2 {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   margin-right: 15px;
+  margin-left: 15px;
   width: 320px;
   height: 390px;
   overflow: hidden;
@@ -187,7 +188,6 @@ h2 {
 @media (min-width: 1024px) {
   .card {
     height: 415px;
-    margin-right: 2%;
     position: relative;
     overflow: hidden;
     transition: box-shadow 0.8s ease, border-color 0.8s ease;
