--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -187,7 +187,7 @@ h2 {
   text-align: left;
   position: relative;
   transform-style: preserve-3d;
-  transition: transform 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: transform 2.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   border-radius: 20px;
   cursor: pointer;
 }
@@ -390,7 +390,7 @@ h2 {
     height: 420px;
     position: relative;
     transform-style: preserve-3d;
-    transition: transform 3s cubic-bezier(0.4, 0.0, 0.2, 1);
+    transition: transform 2.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); /* harmonisé */
     border-radius: 22px;
   }
 
